--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <header class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container">
+      <h1>Recordly</h1>
+    </div>
+  </header>
+  <div class="container">
+    <h1>Welcome Home</h1>
+    <%= yield %>
+  </div>
 
 </body>
 </html>
