--- a/app/views/home_pages/index.html.erb
+++ b/app/views/home_pages/index.html.erb
@@ -1,2 +1,7 @@
-<h1>HomePages#home</h1>
-<p>Find me in app/views/home_pages/home.html.erb</p>
+<div class="jumbotron text-center">
+  <h1>Welcomer to Recordly</h1>
+  <div class="row">
+    <div class="col-md-6"><%= link_to "Sign Up", new_user_path,  class: 'btn btn-primary btn-lg'%></div>
+      <div class="col-md-6"><%= link_to "Log In", "#",  class: 'btn btn-primary btn-lg'%></div>
+  </div>
+</div>
