--- a/app/assets/stylesheets/albums.scss
+++ b/app/assets/stylesheets/albums.scss
@@ -1,7 +1,36 @@
 // Place all the styles related to the Albums controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.albums .row {
-  padding-bottom: 20px;
+// .albums .row {
+//   padding-bottom: 10px;
+//
+// }
+.my-body{
+  background: #1c1c1e;
+  font-family: 'Roboto', sans-serif;
+}
+.thumbnail {
 
+  border: 0;
+  border-radius: 0;
+  padding: 0;
+  height: 180px;
+}
+
+.fav-del{
+  float: right;
+}
+
+.my-thumbnail {
+  background: #007809;
+}
+.my-link:hover {
+  text-decoration: none;
+}
+
+.my-link:hover .thumbnail img {
+  opacity: 0.5;
+}
+.mssg{
+  color: white;
 }
