--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -22,10 +22,16 @@ input {
     margin: 0 0 30px 0;
   }
 }
-// 
+//
 // .field_with_errors {
 //   @extend .has-error;
 //   .form-control {
 //     color: red;
 //   }
 // }
+
+
+.user h1 {
+
+  padding-top: 40px;
+}
