--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,21 +8,23 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 </head>
-<body>
+<body class='my-body'>
   <header class="navbar navbar-fixed-top navbar-inverse">
     <div class="container">
       <aside class="left">Recordly</aside>
-      <% if logged_in? %>
+      <% if !current_user.nil? %>
         <aside class="right"><ul class='home_nav'>
           <li><%= link_to 'Albums', albums_path %></li>
           <li><%= link_to 'Artists', bands_path %></li>
           <li><%= link_to 'Records', tracks_path %></li>
-          <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+          <li><%= link_to "Log out", session_path, method: "delete" %></li>
         </ul></aside>
       <% else %>
-      <ul>
-        <li><%= link_to 'Log in', login_path%></li>
-      </ul>
+      <aside class="right"><ul class='home_nav'>
+        <li><%= link_to 'Home', root_url%></li>
+        <li><%= link_to 'Sign Up', new_user_path%></li>
+        <li><%= link_to 'Log in', new_session_url%></li>
+      </ul></aside>
       <% end %>
     </div>
   </header>
