--- a/app/assets/stylesheets/tracks.scss
+++ b/app/assets/stylesheets/tracks.scss
@@ -4,7 +4,8 @@
 
 .tracks {
   margin-top: 70px;
-    color: #677998;
+  color: #677998;
+    font-family: 'Playfair Display', serif;
 }
 .single-tr{
   margin-top: 20px;
