--- a/app/views/albums/_favorite_albums.html.erb
+++ b/app/views/albums/_favorite_albums.html.erb
@@ -1,5 +1,5 @@
 <% if @albums_favorite.count == 0 %>
-  <p class='text-center mssg'> You dont' have favotites albums</p>
+  <p class='text-center mssg'> You don't have favotites albums</p>
 <% else %>
   <% @albums_favorite.each do |album|%>
     <div class="col-md-4 col-sm-6">
