--- a/app/views/tracks/_favorite_tracks.html.erb
+++ b/app/views/tracks/_favorite_tracks.html.erb
@@ -1,5 +1,5 @@
 <% if @tracks_favorite.count == 0 %>
-  <p class='text-center mssg'> You dont' have favotites songs</p>
+  <p class='text-center mssg'> You don't have favotites songs</p>
 <% else %>
 <ul class='fav-songs'>
   <% @tracks_favorite.each do |track|%>
