--- a/app/assets/stylesheets/bands.scss
+++ b/app/assets/stylesheets/bands.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .bands {
   margin-top: 70px;
+    font-family: 'Playfair Display', serif;
 }
 .bands .row {
   padding-bottom: 20px;
