--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,20 +1,22 @@
 
 <main class='albums'>
   <div class="container">
-    <%= link_to "Back to albums", albums_path, class: 'btn btn-default'%>
-    <%= link_to "Add a new song", new_track_path, class: 'btn btn-default'%>
-    <%= link_to "See favorites songs", new_track_path, class: 'btn btn-default'%>
+    <div class="text-center">
+      <%= link_to "Back to albums", albums_path, class: 'btn btn-default'%>
+      <%= link_to "Add a new song", new_track_path, class: 'btn btn-default'%>
+      <%= link_to "See favorites songs", new_track_path, class: 'btn btn-default'%>
+    </div>
+
     <div class="show row">
       <div class="cover col-md-4"></div>
 
-      <div class="col-sm-8">
+      <div class="col-sm-8 ">
         <h2 class="album-title"><%= @album.name %></h2>
         <p class="album-artist"><%= @album.band.name %> <%= @album.year%></p>
 
-
-        <div class="track row">
+        <div class="track ">
           <% @album.tracks.each do |track|%>
-          <div class="name col-md-8"><%= track.name%>
+          <div class="name-tracks col-md-8"><%= track.name%>
             <% if track.favotite %>
               <%= link_to "",  favorite_track_path(track), class: ' fa fa-star-o favorite', method: :put %>
             <% else %>
